download as png file

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <br>
                     <div>
                         <a class="button" id="downloadSVG">Download SVG</a>
+                        <a class="button" id="downloadING">Download PNG</a>
                     </div>
                     <br>
                     <div id="svgContainer"  ></div>
