add path generator

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
             </label>
             <br />
             <label>
+                <span>Bead Width (mm):</span>
+                <input type="text" id="beadWidth" value="1.1">
+            </label>
+            <label>
+                <span>Bead Height (mm):</span>
+                <input type="text" id="beadHeight" value="1.0">
+            </label>
+            <br />
+
+            <label>
                 <span>Width (mm):</span>
                 <input type="text" id="widthNo" value="40">
             </label>
