add A4 and A3 paper size

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <form id="DOSEmapperParameters" action="">
             <label>
                 <span>Output:</span>
-                <Input type="radio" name="dpi" id="dpi72" value="72ppx" checked>
-                72ppx dpi
-                <Input type="radio" name="dpi" id="dpi96" value="96ppx" />
-                96ppx dpi
+                <Input type="radio" name="paperSize" id="a4" value="a4" checked>
+                A4
+                <Input type="radio" name="paperSize" id="a3" value="a3" />
+                A3
             </label>
             <br />
             <label>
@@ -36,15 +36,15 @@
 
             <label>
                 <span>Width (mm):</span>
-                <input type="text" id="widthNo" value="40">
+                <input type="text" id="widthNo" value="200">
             </label>
             <label>
                 <span>Height (mm):</span>
-                <input type="text" id="heightNo" value="40">
+                <input type="text" id="heightNo" value="200">
             </label>
             <label>
                 <span>Padding(mm):</span>
-                <input type="text" id="paddingNo" value="5">
+                <input type="text" id="paddingNo" value="10">
             </label>
 
 
